# rust_project

./: .gitignore  .gitmodules  LICENSE  README.md
web_server_with_database/: Cargo.toml  setup_and_run_server.sh  setup_and_run_server_macos.sh  setup_and_run_server_windows.bat
web_server_with_database/defaults/: README.md  price_calculator_params.json  print_price_evaluator.bat  print_price_evaluator.sh  print_price_evaluator_config.json  prusa_config.ini
web_server_with_database/defaults/prusa_config_files/: prusa_config_PreciseSoft.ini  prusa_config_PreciseStrong.ini  prusa_config_Standard.ini  prusa_config_ThickStrong.ini
web_server_with_database/src/: main.rs
web_server_with_database/src/api/: api.rs  mod.rs  web_socket.rs  web_socket_impl.rs
web_server_with_database/src/common_utils/: global_traits.rs  global_types.rs  mod.rs
web_server_with_database/src/database_handler/: database_handler.rs  database_mock.rs  database_sqlite_impl.rs  database_type_conversions.rs  mod.rs
web_server_with_database/src/database_handling/: database_handling_utilities.rs  mod.rs
web_server_with_database/src/frontend/: app.js  drag_and_drop_area.js  index.html  orders_retriever.js  styles.css
web_server_with_database/src/orca_slicer_interface/: mod.rs  orca_slicer_cli.rs  orca_slicer_interface.rs  orca_slicer_interface_utilities.rs
web_server_with_database/src/prusa_slicer_interface/: mod.rs  prusa_slicer_cli.rs  prusa_slicer_interface.rs  prusa_slicer_mock.rs  prusa_slicer_price_calculator.rs
