[package]
name = "web_server_with_database"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
actix = "0.13"
rusqlite = "0.26.0"
actix-files = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4.0"
actix-multipart = "0.4"
sanitize-filename = "0.3"
futures = "0.3"